@@ -1,3 +1,4 @@
+2014-04-19 add Rong_Cache_Driver_Memcache
 2014-01-25 {HtmlRadios} {HtmlCheckboxes} {HtmlSelect}共有options属性，前身是from.还有selected ,checked属性的修改。
 2014-01-04 修改了wudimei模板引擎的系统变量{$wudimei.session.username}引用的问题。添加了{php}{/php}模板标签。
 		   添加了调用函数的标签{call function="display_product" qty=1+$cart.0.id name=$cart.0.name return=$prdHtml}{$prdHtml} <br />
